--- a/xmas.css
+++ b/xmas.css
@@ -77,6 +77,11 @@ body .hs-button.primary,
 body input[type="submit"],
 body input[type="button"] {
 	color: #42a3bf;
+	background-color: white;
+	margin-top: 30px;
+	padding: 10px 20px 10px 20px;
+	font-family: 'Lato',sans-serif;
+	border-radius: 20px;
 }
 
 body .hs-button.primary:hover,
@@ -86,8 +91,10 @@ body input[type="button"]:hover {}
 body .hs-button.primary:focus,
 body input[type="submit"]:focus,
 body input[type="button"]:focus {
-	color: white;
+
 }
+
+
 
 
 
