--- a/xmas.css
+++ b/xmas.css
@@ -77,19 +77,24 @@
 	padding:4px;
 	font-family: 'Lato',sans-serif;
 	font-size: 1.5em;
+	width: 600px;
+}
+
+.submitted-message {
+	font-size: 2em;
 }
 
 body .hs-button.primary,
 body input[type="submit"],
 body input[type="button"] {
 	color: #42a3bf;
-	background-color: white;
+	background-color: rgba(0, 0, 0, 0.5);
 	margin-top: 30px;
 	padding: 10px 20px 10px 20px;
 	font-family: 'Lato',sans-serif;
 	border-radius: 7px;
 	font-size: 2em;
-	border-color: none;
+	border-color: #42a3bf;
 }
 
 body .hs-button.primary:hover,
